tdf#160888 package: fix opening password protected scripting library

The problem is that XBufferedThreadedStream does not implement
XSeekable, so the new code in ZipFile::checkValidPassword() throws an
exception, and then joining the UnzippingThread hangs.

Implementing XSeekable doesn't appear to help, as the mutex that
is used by XBufferedThreadedStream and the UnzippingThread is already
locked by checkValidPassword() [fixably] and by getDataStream().

So just disable threading for AEAD streams, these are read immediately
anyway so threading isn't much of a benefit.

(regression from commit 2f512aaa6c39390a5a0eb1d1e37f070127d068a4)

Change-Id: I16027d5b03ba6e102bc143c22383eb7f08590e5f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168893
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 31698044cd1fe7a7662740b97ea58f9904b3bb0e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168946
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>